# mysmallLLMserver

./: .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: app.py
src/configs/: __init__.py  api.py  environments.py
src/configs/experiments/: __init__.py  base.py  experiment_0.py
src/core/: model_inference.py
src/utils/: logger.py
